--- a/src/components/Expander/Expander.module.css
+++ b/src/components/Expander/Expander.module.css
@@ -1,4 +1,6 @@
 .Expander {
+  --ne-details-max-height: auto;
+
   position: relative;
 }
 
