--- a/src/styles/ne-settings.css
+++ b/src/styles/ne-settings.css
@@ -12,5 +12,4 @@
   --ne-textfield-x-padding: 16px;
   --ne-textfield-border-radius: 4px;
   --ne-textfield-min-height: auto;
-  --ne-details-max-height: auto;
 }
